--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ dependencies {
     implementation 'com.opencsv:opencsv:5.6'
 }
 
+java {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+}
+
 test {
     useJUnitPlatform()
 }
